垃圾的一个版本

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,5 @@
 
-all:main.o client.o
-	gcc main.o client.o -o APP_client
+all:main.o client.o employee.o
+	gcc main.o client.o employee.o -o APP_client
 clean:
 	rm *.o APP_client
