管理员登陆与创建新用户， 新用户还有打印信息没写

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,5 @@
 
-all:main.o client.o employee.o
-	gcc main.o client.o employee.o -o APP_client
+all:main.o client.o employee.o admin.o
+	gcc main.o client.o employee.o admin.o -o APP_client
 clean:
 	rm *.o APP_client
