--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,5 @@
 
-all:main.o client.o employee.o admin.o
-	gcc main.o client.o employee.o admin.o -o APP_client
+all:main.o client.o employee.o admin.o other.o
+	gcc main.o client.o employee.o admin.o other.o -o APP_client
 clean:
 	rm *.o APP_client
