整理服务器端代码

--- a/server/Makefile
+++ b/server/Makefile
@@ -2,9 +2,8 @@
 
 CC=gcc
 Libs=sqlite3
-Objs=$(wildcard sqlite3/*.c) \
-	 $(wildcard socket/*.c) $(wildcard business/*.c)
-Includes=-I./sqlite3 -I./socket -I./business -I../common/ 
+Objs=$(wildcard store/*.c) $(wildcard network/*.c) $(wildcard business/*.c) $(wildcard iopoll/*.c)
+Includes=-I./store -I./network -I./business -I./iopoll -I../common/ 
 
 main:$(Objs) main.c
 	$(CC) main.c $(Objs) -o $@ -l $(Libs) $(Includes)
