简单的代码整理

--- a/client/Makefile
+++ b/client/Makefile
@@ -1,5 +1,5 @@
 
-all:main.o client.o employee.o admin.o other.o
-	gcc main.o client.o employee.o admin.o other.o -o APP_client
+client:main.o client.o employee.o admin.o other.o
+	gcc main.o client.o employee.o admin.o other.o -o client
 clean:
-	rm *.o APP_client
+	rm *.o client
